--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "resolutions": {
+    "events": "^3.3.0"
+  },
   "scripts": {
     "start": "webpack serve --env port=3001",
     "build:prod": "webpack --env mode=production",
@@ -12,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -19,6 +23,7 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.18.5",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.9.0",
     "sass": "^1.77.8",
     "sass-loader": "^14.2.1",
@@ -34,6 +39,6 @@
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.0"
+    "react-router-dom": "^6.25.1"
   }
 }
