--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^5.6.0",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
     "react-router-dom": "^6.25.1"
   }
 }
