--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "scripts": {
     "start": "webpack serve --env port=3001",
     "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development"
+    "build:dev": "webpack --env mode=development",
+    "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
@@ -23,7 +26,10 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.18.5",
     "css-loader": "^7.1.2",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
     "file-loader": "^6.2.0",
+    "globals": "^15.9.0",
     "mini-css-extract-plugin": "^2.9.0",
     "sass": "^1.77.8",
     "sass-loader": "^14.2.1",
@@ -31,6 +37,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
