add stylelint and eslint for i18next

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix"
+    "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,7 @@
     "@types/webpack-env": "^1.18.5",
     "css-loader": "^7.1.2",
     "eslint": "^9.8.0",
+    "eslint-plugin-i18next": "^6.0.9",
     "eslint-plugin-react": "^7.35.0",
     "file-loader": "^6.2.0",
     "globals": "^15.9.0",
@@ -34,6 +37,8 @@
     "sass": "^1.77.8",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "stylelint": "^16.8.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
