add unit test for component sidebar and for button

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,10 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "./config/jest/setupTests.ts"
+  ],
 }
