--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.8.0",
     "@jest/globals": "^29.7.0",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.5",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-env": "^1.18.5",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
@@ -39,9 +44,11 @@
     "eslint-plugin-react": "^7.35.0",
     "file-loader": "^6.2.0",
     "globals": "^15.9.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
+    "regenerator-runtime": "^0.14.1",
     "sass": "^1.77.8",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
@@ -53,6 +60,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
